--- a/program.htm
+++ b/program.htm
@@ -510,8 +510,8 @@ Wine</h3>
         &emsp;&emsp;&emsp;&emsp;&oplus;
         <b>Resource</b><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_icon.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_icon.htm">
             Icon</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
