X7S Added teardown and screen images.

--- a/index.htm
+++ b/index.htm
@@ -172,6 +172,7 @@
     <a href="#jp09">            <img src="img/photos/jp09.jpg"              class="t0" title="JP09"/></a>
     <a href="#gb300">           <img src="img/photos/gb300.jpg"             class="t0" title="GB300"/></a>
     <a href="#q19">             <img src="img/photos/q19.jpg"               class="t0" title="Q19"/></a>
+    <a href="#x7s">             <img src="img/photos/x7s.jpg"               class="t0" title="X7S"/></a>
 </p>
 </div>
 
@@ -7462,6 +7463,21 @@ Q19</h3>
 
 &dash;
 <a href="handheld/q19_screen.htm">
+可視角</a><br>
+<br><br><br><br>
+</p>
+
+<div id="x7s"></div>
+<h3><img src="img/photos/x7s.jpg" class="floatLeft"/>
+X7S</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/x7s_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/x7s_screen.htm">
 可視角</a><br>
 <br><br><br><br>
 </p>
