--- a/program.htm
+++ b/program.htm
@@ -514,28 +514,28 @@ Wine</h3>
             <a href="program/wine_cpp_res_icon.htm">
             Icon</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_rcdata.htm">
-            RCDATA</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_rcdata.htm">
+            RCData</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_dialogbox.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_dialogbox.htm">
             DialogBox</a><br>
         
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_version.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_version.htm">
             VersionInfo</a><br>
         
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_stringtable.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_stringtable.htm">
             StringTable</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_accelerator.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_accel.htm">
             Accelerator</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_dialog.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_res_dialog.htm">
             CreateDialog</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
