--- a/program/gnu_cpp_protobuf.htm
+++ b/program/gnu_cpp_protobuf.htm
@@ -75,10 +75,11 @@ int main(int argc, char **argv)
 $ protoc --cpp_out . main.proto
 $ g++ main.cpp -o test main.pb.cc -I. -lprotobuf
 $ ./test
-    t1.name: t1
-    t1.value: 100
     t2.name: t1
     t2.value: 100
+    t2.items_size: 2
+    [2] = apple
+    [1] = egg
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
