--- a/program.htm
+++ b/program.htm
@@ -557,16 +557,16 @@ Wine</h3>
             <a href="program/wine_cpp_comm_pagesetup.htm">
             PageSetup</a><br>
         
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_choosefont.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_comm_choosefont.htm">
             ChooseFont</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_choosecolor.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_comm_choosecolor.htm">
             ChooseColor</a><br>
         
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_replacetext.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_comm_replacetext.htm">
             ReplaceText</a><br>
 
 &dash;
