--- a/program.htm
+++ b/program.htm
@@ -584,45 +584,49 @@ MASM32</h3>
 開發環境</a><br>
 
 &dash;
+<a href="program/masm32_makefile.htm">
+Makefile</a><br>
+
+&dash;
 <a href="program/masm32_hello.htm">
 Hello, world!</a><br>
 
 &oplus;
 <b>Dialog</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/dlg_window.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/masm32_dlg_window.htm">
     Create Window</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/dlg_event.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/masm32_dlg_event.htm">
     Handle Event</a><br>
 
 &oplus;
 <b>Single Document Interface (SDI)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/sdi_window.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/masm32_sdi_window.htm">
     Create Window</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/sdi_event.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/masm32_sdi_event.htm">
     Handle Event</a><br>
         
-&lowast;
-<a href="program/masm32/keyboard.htm">
+&dash;
+<a href="program/masm32_keyboard.htm">
 Keyboard Event</a><br>
 
-&lowast;
-<a href="program/masm32/mouse.htm">
+&dash;
+<a href="program/masm32_mouse.htm">
 Mouse Event</a><br>
 
-&lowast;
-<a href="program/masm32/timer.htm">
+&dash;
+<a href="program/masm32_timer.htm">
 Set Timer</a><br>
 
-&lowast;
-<a href="program/masm32/scrollbar.htm">
+&dash;
+<a href="program/masm32_scrollbar.htm">
 Set Scrollbar</a><br>
 
 &oplus;
