--- a/program/mingw_cpp_bitblt.htm
+++ b/program/mingw_cpp_bitblt.htm
@@ -1,58 +1,16 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>MinGW &gt;&gt; C/C++ &gt;&gt; Painting</h3>
-<p><b>Device Context BitBlt</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - MinGW - C/C++ - Painting - <b>BitBlt</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="http://winapi.freetechsecrets.com/win32/">win32</a><br>
-2. <a href="https://www-user.tu-chemnitz.de/~heha/petzold/ch05d.htm">petzold</a><br>
-3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
-4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
+http://www.winprog.org/tutorial/<br>
+http://winapi.freetechsecrets.com/win32/<br>
+https://github.com/gammasoft71/Examples_Win32<br>
+http://masm32.com/board/index.php?topic=3584.0<br>
+https://learn.microsoft.com/en-us/windows/win32/winmsg/window-styles<br><br>
 
 Device Context(DC)是一個可以用繪製圖形的裝置，當創建一個新的Windows視窗時，系統也會創建一個DC用來提供繪製圖形的功能，DC只是一個裝置，它需要一塊Buffer用來儲存需要顯示的圖形(像素)，系統預設也會幫Window視窗配置一塊可以用來儲存像素的Buffer，這也是為何可以直接在視窗上面繪製圖形的緣故，需要注意的是，當使用CreateDC()、CreateCompatibleDC()創建一個新的DC時，這樣的DC預設並沒有Buffer可以使用，所以，需要使用CreateBitmap()、CreateCompatibleBitmap()配置Buffer，這樣才可以在這個DC上面繪製圖形<br><br>
 
@@ -129,15 +87,7 @@ $ i686-w64-mingw32-gcc -mwindows main.c -o main.exe
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="../nasm/win32_bitblt/1.jpg" class="maxSize">
+<img style="border:0px" src="nasm_win32_bitblt/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
