--- a/program.htm
+++ b/program.htm
@@ -798,48 +798,51 @@ MinGW</h3>
         <a href="program/mingw_cpp_urldown.htm">
         URLDownloadToFile</a><br>
 
-    &lowast;
-    <a href="program/mingw/inline_asm.htm">
-    inline assembly</a><br>
+    &dash;
+    <a href="program/mingw_inline_asm.htm">
+    Inline Assembly</a><br>
 
-    &lowast;
-    <a href="program/mingw/dll.htm">
+    &dash;
+    <a href="program/mingw_dll.htm">
     如何編譯成DLL</a><br>
 
-    &lowast;
-    <a href="program/mingw/tiny_pe.htm">
+    &dash;
+    <a href="program/mingw_tiny_pe.htm">
     如何編譯出最小Size的PE檔案</a><br>
 
-    &lowast;
-    <a href="program/mingw/fix_junk.htm">
-    解決"junk (%esp) after expression"問題</a><br>
+    &dash;
+    <a href="program/mingw_fix_junk.htm">
+    解決Junk (%esp) after expression問題</a><br>
 
-    &lowast;
-    <a href="program/mingw/fix_initcomm.htm">
-    解決"undefined reference to InitCommonControlsEx"問題</a><br>
+    &dash;
+    <a href="program/mingw_fix_initcomm.htm">
+    解決Undefined reference to InitCommonControlsEx問題</a><br>
 
-    &lowast;
-    <a href="program/mingw/fix_hid.htm">
-    解決"undefined reference to HidD_GetHidGuid(_GUID*)@4"問題</a><br>
+    &dash;
+    <a href="program/mingw_fix_hid.htm">
+    解決Undefined reference to HidD_GetHidGuid(_GUID*)@4問題</a><br>
 
     &oplus;
     <b>OpenCV</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/build_opencv.htm">
-        安装環境</a><br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/mingw_opencv_setup.htm">
+        開發環境</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/opencv_mp4.htm">
-        show mp4</a><br>
+        &emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>C/C++</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/mingw_opencv_cpp_mp4.htm">
+            Show MP4</a><br>
         
-        &emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/fix_posix.htm">
-        解決"error: recursive_mutex in namespace std does not name a type"問題</a><br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/mingw_fix_posix.htm">
+        解決Error: recursive_mutex in namespace std does not name a type問題</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/mingw/fix_rdynamic.htm">
-        解決"x86_64-w64-mingw32-gcc: error: unrecognized command line option -rdynamic"問題</a><br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/mingw_fix_rdynamic.htm">
+        解決x86_64-w64-mingw32-gcc: error: unrecognized command line option -rdynamic問題</a><br>
 <br><br><br><br>
 
 <div id="nasm"></div>
