--- a/program/nasm_win32x_setup.htm
+++ b/program/nasm_win32x_setup.htm
@@ -13,7 +13,7 @@ https://sourceforge.net/projects/nasmx/<br><br>
 </p>
 <pre>
 $ cd
-$ wget https://raw.githubusercontent.com/ThieuMinh26/Proot-Setup/main/Box86-64_Wine86-64.sh
+$ wget https://github.com/steward-fu/website/releases/download/pro1/Box86-64_Wine86-64.sh
 $ chmod a+x ./Box86-64_Wine86-64.sh
 $ ./Box86-64_Wine86-64.sh
 
