--- a/program/hla_win32_dlg_event.htm
+++ b/program/hla_win32_dlg_event.htm
@@ -1,56 +1,15 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>High Level Assembly (HLA) &gt;&gt; Win32 API (HLA v1.x) &gt;&gt; Dialog</h3>
-<p><b>Handle Event</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - High Level Assembly (HLA) - Win32 API (HLA v1.x) - Dialog - <b>Handle Event</b></h3>
+<hr size="1"><br>
 <p>
-參考資訊：<br>
-1. <a href="http://winapi.freetechsecrets.com/win32/">win32</a><br>
-2. <a href="http://masm32.com/board/index.php?topic=3584.0">masm32</a><br><br>
+參考網站：<br>
+http://winapi.freetechsecrets.com/win32/<br>
+http://masm32.com/board/index.php?topic=3584.0<br>
+https://www.plantation-productions.com/Webster/<br>
+https://www.plantation-productions.com/Webster/Win32Asm/win32API.html<br><br>
 
 一般在建立Windows視窗時，會註冊自定義的Class並且設定事件處理的副程式(callback)，不過，目前範例使用的Class是系統預設的WC_DIALOG，因此，可以透過SetWindowLong()設定callback，這種替換callback的行為就稱為Subclass，意指為原本Class的Subclass，所以Subclass後，需要將原先callback的位址(SetWindowLong()的回傳值)保存下來，然後透過呼叫CallWindowProc()(傳入原先callback的位址)，用來將處理控制權移交回原先視窗元件，所以當有多層Subclass的情形發生時，每次在處理事件時，記得判斷對應的Handle，如：在處理關閉事件時(WM_CLOSE)，會先判斷目前的hWnd是否為當前的視窗hWnd，如果是當前視窗hWnd，才進行關閉的動作，避免關閉到其它視窗元件<br><br>
 
@@ -125,42 +84,8 @@ end main;
 <b>Line 22</b>：在離開副程式時，Pacal語法是使用exit而非Assembly的ret()，如果使用ret()離開，記得要手動釋放Stack資源<br>
 <b>Line 29</b>：將處理控制權移交給下一個視窗元件</br><br>
 
-Makefile
-</p>
-<pre>
-export WINEPREFIX=/home/user/.wine_amd64
-
-TARGET=main
-MYWINE=box86 wine
-
-all:
-	${MYWINE} hlaparse.exe -WIN32 -level=high -v -test ${TARGET}.hla
-	${MYWINE} polink.exe @${TARGET}.link hlalib.lib ${TARGET}.obj /OUT:${TARGET}.exe
-
-run:
-	${MYWINE} ${TARGET}.exe
-
-clean:
-	rm -rf ${TARGET}.exe ${TARGET}.obj ${TARGET}.link
-</pre><br>
-
-<p>
-編譯、執行
-</p>
-<pre>
-$ make
-$ make run
-</pre>
-<p>
-<img style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize">
+完成<br>
+<img style="border:0px" src="nasm_win32_dlg_window/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
