--- a/program/fasm_win32_sdi_event.htm
+++ b/program/fasm_win32_sdi_event.htm
@@ -1,55 +1,12 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>FASM &gt;&gt; Assembly (x86) &gt;&gt; Win32 API &gt;&gt; Single Document Interface (SDI)</h3>
-<p><b>Handle Event</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - Flat Assembler (FASM) - Win32 API - Single Document Interface (SDI) - <b>Handle Event</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://board.flatassembler.net/">fasm</a><br><br>
+https://board.flatassembler.net/<br><br>
 
 當視窗有事件需要被處理時，系統會透過呼叫註冊的Callback副程式來處理，而這個Callback副程式就是在註冊Class時，設定給lpfnWndProc的事件處理副程式，因此，當這個事件處理副程式被呼叫時，可以處理自己感興趣的事件，而其餘事件則交給系統處理(透過呼叫DefWindowProc())，需要注意的是，例如：WM_CLOSE，就必須由該視窗自己處理，因為系統無法知道還有哪些額外的資源需要被釋放掉<br><br>
 
@@ -83,7 +40,7 @@ import kernel,                           \
 szName      db       "main",0
 CommandLine dd       0
 hInstance   dd       0
-wndClass    WNDCLASS <0>
+wndClass    WNDCLASS &lt;0&gt;
 
     section ".text" code readable executable
 proc WndProc hWnd, uMsg, wParam, lParam
@@ -146,42 +103,8 @@ start:
 <b>Line 32~36</b>：關閉視窗的順序為：主視窗收到WM_CLOSE事件時，呼叫DestroyWindow()，DestroyWindow()會自動將子視窗的相關資源也一併釋放掉(包含Resource描述的資源)，系統接著會發送WM_DESTROY事件給主視窗，待主視窗收到WM_DESTROY事件時，呼叫PostQuitMessage()結束視窗，值得注意的地方是，SendMessage()是屬於Block方式呼叫(必須等待動作執行完畢才返回)，而PostQuitMessage()則是Non-block方式呼叫<br>
 <b>Line 37</b>：其餘事件由系統代為處理</br><br>
 
-Makefile
-</p>
-<pre>
-export WINEPREFIX=/home/user/.wine_amd64
-
-TARGET=main
-MYWINE=box86 wine
-FASM32=/home/user/.wine_amd64/drive_c/fasm
-
-all:
-	${MYWINE} ${FASM32}/fasm.exe ${TARGET}.asm
-
-run:
-	${MYWINE} ${TARGET}.exe
-
-clean:
-	rm -rf ${TARGET}.exe
-</pre><br>
-
-<p>
-編譯、執行
-</p>
-<pre>
-$ make
-$ make run
-</pre>
-<p>
-<img style="border:0px" src="../nasm/win32_sdi_window/1.jpg" class="maxSize">
+完成<br>
+<img style="border:0px" src="nasm_win32_sdi_window/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
