--- a/program/fasm_win32_brush.htm
+++ b/program/fasm_win32_brush.htm
@@ -1,55 +1,12 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>FASM &gt;&gt; Assembly (x86) &gt;&gt; Win32 API &gt;&gt; Painting</h3>
-<p><b>Create Brush</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - Flat Assembler (FASM) - Win32 API - <b>Create Brush</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://board.flatassembler.net/">fasm</a><br><br>
+https://board.flatassembler.net/<br><br>
 
 繪畫的顏色設定可以分成Brush、Pen兩種，Brush代表填充的顏色，Pen則是線條的顏色<br><br>
 
@@ -185,42 +142,8 @@ start:
 <b>Line 68~70</b>：將可視區域填入紅色<br>
 <b>Line 74</b>：釋放資源<br><br>
 
-Makefile
-</p>
-<pre>
-export WINEPREFIX=/home/user/.wine_amd64
-
-TARGET=main
-MYWINE=box86 wine
-FASM32=/home/user/.wine_amd64/drive_c/fasm
-
-all:
-	${MYWINE} ${FASM32}/fasm.exe ${TARGET}.asm
-
-run:
-	${MYWINE} ${TARGET}.exe
-
-clean:
-	rm -rf ${TARGET}.exe
-</pre><br>
-
-<p>
-編譯、執行
-</p>
-<pre>
-$ make
-$ make run
-</pre>
-<p>
-<img style="border:0px" src="../nasm/win32_brush/1.jpg" class="maxSize">
+完成<br>
+<img style="border:0px" src="nasm_win32_brush/1.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
