--- a/program/fasm_win32_dlg_window.htm
+++ b/program/fasm_win32_dlg_window.htm
@@ -13,37 +13,15 @@ Windows的視窗可以分成：<b>Dialog</b>、Single Document Interface(<b>SDI<
 main.asm
 </p>
 <pre class="brush:asm">
-    format PE GUI 4.0
-    entry start
- 
-    include "c:\fasm\include\win32a.inc"
-
-    section ".idata" import data readable writeable
-library user, "user32.dll", kernel, "kernel32.dll"
- 
-import user,                            \
-    MessageBox,      "MessageBoxA",     \
-    GetMessage,      "GetMessageA",     \
-    CreateWindowEx,  "CreateWindowExA", \
-    DispatchMessage, "DispatchMessageA"
-
-import kernel,                          \
-    ExitProcess,     "ExitProcess",     \
-    GetCommandLine,  "GetCommandLineA", \
-    GetModuleHandle, "GetModuleHandleA"
- 
-    section ".data" data readable writeable
-szCaption   db  "main",0
-CommandLine dd  0
-hInstance   dd  0
- 
+    include "head.asm"
+  
     section ".text" code readable executable
 proc WinMain hInst, hPrevInst, CmdLine, CmdShow
     local msg:MSG
-
+ 
     invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, szCaption, \
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
-
+ 
 @@:
     lea eax, [msg]
     invoke GetMessage, eax, NULL, 0, 0
@@ -56,29 +34,27 @@ proc WinMain hInst, hPrevInst, CmdLine, CmdShow
     mov eax, [msg.wParam]
     ret
 endp
-
+ 
 start:
     invoke GetModuleHandle, NULL
     mov [hInstance], eax
- 
+  
     invoke GetCommandLine
     mov [CommandLine], eax
- 
+  
     stdcall WinMain, [hInstance], NULL, [CommandLine], SW_SHOWNORMAL
     invoke ExitProcess, eax
 </pre>
 <p>
-<b>Line 26~43</b>：proc、endp用來定義Procedure的區間<br>
-<b>Line 27</b>：Local變數宣告方式<br>
-<b>Line 29~30</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
-<b>Line 32</b>：暫時性的Label，不需要指定名稱，適合小範圍的應用，但需要搭配@f、@b使用<br>
-<b>Line 33</b>：FASM沒有addr偽指令(取得Local變數的位址)，因此，需要手動使用lea指令取得變數位址<br>
-<b>Line 34</b>：從Queue提取Message(包含視窗、系統事件)，addr用來計算local變數的位址，offset則是global變數位址<br>
-<b>Line 36</b>：@f(forward)代表會跳到下一個@@位置(Line 40)<br>
-<b>Line 38</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以執行後，必須使用kill命令強制關閉該視窗<br>
-<b>Line 39</b>：@b(back)代表會跳到上一個@@位置(Line 32)<br>
-<b>Line 46~50</b>：一般習慣是在程式進入時，保存Instance、CommandLine的內容<br>
-<b>Line 52</b>：呼叫自定義的WinMain()，模擬C語言的WinMain()，當然也可以把內容都寫在start()裡面，stdcall巨集會展開成call + push的綜合指令，invoke巨集也是會展開成call + push的綜合指令，差別在於，invoke巨集是屬於間接呼叫，而stdcall巨集屬於直接呼叫，這些巨集位於：fasm/include/macro/proc32.inc<br><br>
+<b>Line 7~8</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
+<b>Line 10</b>：暫時性的Label，不需要指定名稱，適合小範圍的應用，但需要搭配@f、@b使用<br>
+<b>Line 11</b>：FASM沒有addr偽指令(取得Local變數的位址)，因此，需要手動使用lea指令取得變數位址<br>
+<b>Line 12</b>：從Queue提取Message(包含視窗、系統事件)，addr用來計算local變數的位址，offset則是global變數位址<br>
+<b>Line 14</b>：@f(forward)代表會跳到下一個@@位置(Line 40)<br>
+<b>Line 16</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以執行後，必須使用kill命令強制關閉該視窗<br>
+<b>Line 17</b>：@b(back)代表會跳到上一個@@位置(Line 32)<br>
+<b>Line 24~28</b>：一般習慣是在程式進入時，保存Instance、CommandLine的內容<br>
+<b>Line 30</b>：呼叫自定義的WinMain()，模擬C語言的WinMain()，當然也可以把內容都寫在start()裡面，stdcall巨集會展開成call + push的綜合指令，invoke巨集也是會展開成call + push的綜合指令，差別在於，invoke巨集是屬於間接呼叫，而stdcall巨集屬於直接呼叫，這些巨集位於：fasm/include/macro/proc32.inc<br><br>
 
 完成<br>
 <img style="border:0px" src="nasm_win32_dlg_window/1.jpg" class="maxSize">
