--- a/program/fasm_win32_dlg_window.htm
+++ b/program/fasm_win32_dlg_window.htm
@@ -14,14 +14,14 @@ main.asm
 </p>
 <pre class="brush:asm">
     include "head.asm"
-  
+   
     section ".text" code readable executable
 proc WinMain hInst, hPrevInst, CmdLine, CmdShow
     local msg:MSG
- 
-    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, szCaption, \
+  
+    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, szName, \
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
- 
+  
 @@:
     lea eax, [msg]
     invoke GetMessage, eax, NULL, 0, 0
@@ -34,15 +34,15 @@ proc WinMain hInst, hPrevInst, CmdLine, CmdShow
     mov eax, [msg.wParam]
     ret
 endp
- 
+  
 start:
     invoke GetModuleHandle, NULL
     mov [hInstance], eax
-  
+   
     invoke GetCommandLine
-    mov [CommandLine], eax
-  
-    stdcall WinMain, [hInstance], NULL, [CommandLine], SW_SHOWNORMAL
+    mov [pCommand], eax
+   
+    stdcall WinMain, [hInstance], NULL, [pCommand], SW_SHOWNORMAL
     invoke ExitProcess, eax
 </pre>
 <p>
