--- a/program/fasm_win32_head.htm
+++ b/program/fasm_win32_head.htm
@@ -25,14 +25,15 @@ library \
         kernel32,   "kernel32.dll"
 
     section ".data" data readable writeable
-szCaption   db "main",0
-szFont      db "Arial",0
-szMsg       db "Test",0
-dwMsg       =  ($ - szMsg) - 1
-hWin        dd 0
-hInstance   dd 0
-CommandLine dd 0
-defWndProc  dd 0
+szName          db "main",0
+szFont          db "Arial",0
+szMsg           db "Test",0
+MsgLen          =  ($ - szMsg) - 1
+hWin            dd 0
+hInstance       dd 0
+pCommand        dd 0
+pDefWndProc     dd 0
+pWndClass       WNDCLASS &lt;0&gt;
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
