--- a/program.htm
+++ b/program.htm
@@ -1315,18 +1315,18 @@ Flat Assembler (FASM)</h3>
         <a href="program/fasm_win32_dlg_window.htm">
         Create Window</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&loawt;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/fasm_win32_dlg_event.htm">
         Handle Event</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Single Document Interface (SDI)</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&loawt;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/fasm_win32_sdi_window.htm">
         Create Window</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&loawt;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/fasm_win32_sdi_event.htm">
         Handle Event</a><br>
     
