--- a/program/fasm_win32_head.htm
+++ b/program/fasm_win32_head.htm
@@ -34,6 +34,9 @@ hInstance       dd 0
 pCommand        dd 0
 pDefWndProc     dd 0
 pWndClass       WNDCLASS &lt;0&gt;
+szBuf           db 255 dup(0)
+FMT_KBD         db "Key: %d",0
+FMT_MOUSE       db "%d-%d",0
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
