--- a/program/fasm_win32_head.htm
+++ b/program/fasm_win32_head.htm
@@ -37,6 +37,12 @@ pWndClass       WNDCLASS &lt;0&gt;
 szBuf           db 255 dup(0)
 FMT_KBD         db "Key: %d",0
 FMT_MOUSE       db "%d-%d",0
+FMT_TIMER       db "%d",0
+dwCnt           dd 0
+SLUP            db "LINE++",0
+SLDN            db "LINE--",0
+SPUP            db "PAGE++",0
+SPDN            db "PAGE--",0
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
