--- a/program/masm32_pen.htm
+++ b/program/masm32_pen.htm
@@ -10,7 +10,7 @@ http://www.winprog.org/tutorial/<br>
 http://winapi.freetechsecrets.com/win32/<br>
 https://github.com/gammasoft71/Examples_Win32<br><br>
 
-Pen可以想像成是一隻畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
+Pen可以想像成是一支畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
 
 main.asm
 </p>
@@ -103,7 +103,7 @@ start:
 end start
 </pre>
 <p>
-<b>Line 33~34</b>：創造一隻Pen，粗細是10，顏色則是紅色<br>
+<b>Line 33~34</b>：創造一支Pen，粗細是10，顏色則是紅色<br>
 <b>Line 35</b>：選擇要使用的Pen<br>
 <b>Line 36~37</b>：畫一條線<br>
 <b>Line 40</b>：刪除資源<br><br>
