--- a/program/mingw_cpp_pen.htm
+++ b/program/mingw_cpp_pen.htm
@@ -12,7 +12,7 @@ https://github.com/gammasoft71/Examples_Win32<br>
 http://masm32.com/board/index.php?topic=3584.0<br>
 https://learn.microsoft.com/en-us/windows/win32/winmsg/window-styles<br><br>
 
-Pen可以想像成是一隻畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
+Pen可以想像成是一支畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
 
 main.c
 </p>
@@ -63,7 +63,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 }
 </pre>
 <p>
-<b>Line 21</b>：創造一隻Pen，粗細是10，顏色則是紅色<br>
+<b>Line 21</b>：創造一支Pen，粗細是10，顏色則是紅色<br>
 <b>Line 22</b>：選擇要使用的Pen<br>
 <b>Line 23~24</b>：畫一條線<br>
 <b>Line 26</b>：刪除資源<br><br>
