--- a/program/hla_win32_pen.htm
+++ b/program/hla_win32_pen.htm
@@ -11,7 +11,7 @@ http://masm32.com/board/index.php?topic=3584.0<br>
 https://www.plantation-productions.com/Webster/<br>
 https://www.plantation-productions.com/Webster/Win32Asm/win32API.html<br><br>
 
-Pen可以想像成是一隻畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
+Pen可以想像成是一支畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
 
 main.hla
 </p>
@@ -95,7 +95,7 @@ begin main;
 end main;
 </pre>
 <p>
-<b>Line 28~29</b>：創造一隻Pen，粗細是10，顏色則是紅色<br>
+<b>Line 28~29</b>：創造一支Pen，粗細是10，顏色則是紅色<br>
 <b>Line 30</b>：選擇要使用的Pen<br>
 <b>Line 31~32</b>：畫一條線<br>
 <b>Line 35</b>：刪除資源<br><br>
