--- a/program/nasm_win32_pen.htm
+++ b/program/nasm_win32_pen.htm
@@ -9,7 +9,7 @@
 https://masm32.com/board/index.php<br>
 https://www.nasm.us/xdoc/2.13rc9/html/nasmdoc0.html<br><br>
 
-Pen可以想像成是一隻畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
+Pen可以想像成是一支畫筆，粗細、顏色都可以設定，DC(Device Context)可以透過SelectObject()選擇畫筆<br><br>
 
 main.asm
 </p>
@@ -150,7 +150,7 @@ _start:
     call ExitProcess
 </pre>
 <p>
-<b>Line 22~26</b>：創造一隻Pen，粗細是10，顏色則是紅色<br>
+<b>Line 22~26</b>：創造一支Pen，粗細是10，顏色則是紅色<br>
 <b>Line 28~30</b>：選擇要使用的Pen<br>
 <b>Line 32~41</b>：畫一條線<br>
 <b>Line 47~48</b>：刪除資源<br><br>
