--- a/program/nasm_win32x_line.htm
+++ b/program/nasm_win32x_line.htm
@@ -117,7 +117,7 @@ proc start, dword argc, dword argv
 endproc
 </pre>
 <p>
-<b>Line 37~54</b>：產生三隻Pen並且畫出三條直線，需要注意的是，同一時間只能選擇一隻Pen<br><br>
+<b>Line 37~54</b>：產生三支Pen並且畫出三條直線，需要注意的是，同一時間只能選擇一支Pen<br><br>
 
 完成<br>
 <img style="border:0px" src="nasm_win32_line/1.jpg" class="maxSize">
