--- a/program/wine_cpp_line.htm
+++ b/program/wine_cpp_line.htm
@@ -79,7 +79,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 }
 </pre>
 <p>
-<b>Line 23~37</b>：產生三隻Pen並且畫出三條直線，需要注意的是，同一時間只能選擇一隻Pen<br><br>
+<b>Line 23~37</b>：產生三支Pen並且畫出三條直線，需要注意的是，同一時間只能選擇一支Pen<br><br>
 
 編譯、執行
 </p>
